--- a/Web.Statu/Views/Kindex/Debug.cshtml
+++ b/Web.Statu/Views/Kindex/Debug.cshtml
@@ -6,7 +6,10 @@
 @using Devmasters.Core
 @using HlidacStatu.Lib.Analysis.KorupcniRiziko
 @{ var f = HlidacStatu.Lib.Data.Firmy.Get(ViewBag.ICO);
-    ViewBag.Title = "Index korupčního rizika pro " + f.Jmeno; }
+    ViewBag.Title = "Index korupčního rizika";
+        ViewBag.SubTitle  = f.Jmeno; 
+    
+    }
 @section scripts
 {
 
@@ -90,10 +93,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            <b>@y</b>
-        </td>
-}
+            <td>
+                <b>@y</b>
+            </td>}
                 </tr>
 
                 <tr>
@@ -102,11 +104,10 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            <img src="@(Model.ForYear(y).KIndexLabelIconUrl())" style="width:25px" />
-            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)
-        </td>
-}
+            <td>
+                <img src="@(Model.ForYear(y).KIndexLabelIconUrl())" style="width:25px" />
+                @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -114,10 +115,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Statistika.PocetSmluv)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Statistika.PocetSmluv)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -125,10 +125,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePrice(Model.ForYear(y).Statistika.CelkovaHodnotaSmluv, shortFormat: true)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePrice(Model.ForYear(y).Statistika.CelkovaHodnotaSmluv, shortFormat: true)
+            </td>}
                 </tr>
 
 
@@ -138,10 +137,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Statistika.PocetBezCeny)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Statistika.PocetBezCeny)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -149,10 +147,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).Statistika.PercentBezCeny)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).Statistika.PercentBezCeny)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -160,10 +157,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercNovaFirmaDodavatel)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercNovaFirmaDodavatel)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -171,10 +167,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSeZasadnimNedostatkem)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSeZasadnimNedostatkem)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -182,10 +177,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSmlouvySPolitickyAngazovanouFirmou)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSmlouvySPolitickyAngazovanouFirmou)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -193,10 +187,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSmluvUlimitu)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercSmluvUlimitu)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -204,10 +197,9 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercUzavrenoOVikendu)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PercUzavrenoOVikendu)
+            </td>}
                 </tr>
 
                 <tr>
@@ -216,12 +208,11 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            <span style="color:@(gradIndex.Color(Model.ForYear(y).CelkovaKoncentraceDodavatelu.Herfindahl_Hirschman_Modified).ToHex())">
-                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).CelkovaKoncentraceDodavatelu.Herfindahl_Hirschman_Modified)
-            </span>
-        </td>
-}
+            <td>
+                <span style="color:@(gradIndex.Color(Model.ForYear(y).CelkovaKoncentraceDodavatelu.Herfindahl_Hirschman_Modified).ToHex())">
+                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).CelkovaKoncentraceDodavatelu.Herfindahl_Hirschman_Modified)
+                </span>
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -229,17 +220,16 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @if (Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny != null)
-            {
-<span>
-    @(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.PocetSmluvProVypocet) smluv
-</span>
-                    <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified).ToHex())">
-                        <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
-                    </span>}
-        </td>
-}
+            <td>
+                @if (Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny != null)
+                {
+            <span>
+                @(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.PocetSmluvProVypocet) smluv
+            </span>
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
+                                </span>}
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -247,18 +237,17 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td style="vertical-align: top;">
-            @if (Model.ForYear(y).KoncentraceDodavateluCenyULimitu != null)
-            {
-<span>
-    @(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.PocetSmluvProVypocet)/@(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.PocetSmluvBezCenyProVypocet)/
-    za @HlidacStatu.Util.RenderData.ShortNicePrice(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.HodnotaSmluvProVypocet)
-</span>
-                    <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified).ToHex())">
-                        <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified)
-                    </span>}
-        </td>
-}
+            <td style="vertical-align: top;">
+                @if (Model.ForYear(y).KoncentraceDodavateluCenyULimitu != null)
+                {
+            <span>
+                @(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.PocetSmluvProVypocet)/@(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.PocetSmluvBezCenyProVypocet)/
+                za @HlidacStatu.Util.RenderData.ShortNicePrice(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.HodnotaSmluvProVypocet)
+            </span>
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified)
+                                </span>}
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -266,56 +255,88 @@
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-                    <td style="vertical-align: top;border-right:1px #a0a0a0 solid;">
-                        @if (Model.ForYear(y).KIndexVypocet != null)
-                        {
-                            foreach (KIndexData.VypocetDetail.Radek item in Model.ForYear(y).KIndexVypocet.Radky)
-                            {
-                                <div class="row" style="border-bottom: 1px #a0a0a0 dashed">
-                                    <div class="col-xs-6" style="font-size:11px">@item.VelicinaLongName</div>
-                                    <div class="col-xs-6 number" style="white-space: nowrap">@(item.Koeficient) x                                    
-                                    <span style="color:@(KIndexData.KIndexLabelColor(KIndexData.KIndexLabelForPart((KIndexData.KIndexParts)item.Velicina, item.Hodnota)))">
-                                        @HlidacStatu.Util.RenderData.NiceNumber(item.Hodnota)
-                                    </span>
-                                    </div>
-                                </div> 
-                            }
-                            <div class="row">
-                                <div class="col-xs-4" style="font-size:11px"><b>Součet</b></div>
-                                <div class="col-xs-8 number">@HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)</div>
-                            </div>
-                        }
-                    </td>
-                    }
+            <td style="vertical-align: top;border-right:1px #a0a0a0 solid;">
+                @if (Model.ForYear(y).KIndexVypocet != null)
+                {
+                    foreach (KIndexData.VypocetDetail.Radek item in Model.ForYear(y).KIndexVypocet.Radky)
+                    {
+            <div class="row" style="border-bottom: 1px #a0a0a0 dashed">
+                <div class="col-xs-6" style="font-size:11px">@item.VelicinaLongName</div>
+                <div class="col-xs-6" style="white-space: nowrap;font-size:11px;text-align:right">
+                    @(item.Koeficient) x
+                    <span style="color:@(KIndexData.KIndexLabelColor(KIndexData.KIndexLabelForPart((KIndexData.KIndexParts)item.Velicina, item.Hodnota)))">
+                        @HlidacStatu.Util.RenderData.NiceNumber(item.Hodnota)
+                    </span>
+                    =<b>@HlidacStatu.Util.RenderData.NiceNumber(item.Hodnota * item.Koeficient)</b>
+                </div>
+            </div> }
+            <div class="row">
+                <div class="col-xs-4" style="font-size:11px"><b>Součet</b></div>
+                <div class="col-xs-8 number">@HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)</div>
+            </div>}
+            </td>}
                 </tr>
+
+
+                <tr>
+                    <td>
+                        oborový K-Index
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+            <td style="vertical-align: top;border-right:1px #a0a0a0 solid;">
+                @if (Model.ForYear(y).KIndexVypocet?.OboroveKoncentrace != null)
+                {
+                    decimal vahaSum = Model.ForYear(y).KIndexVypocet.OboroveKoncentrace.Radky.Sum(m => m.Vaha);
+                    foreach (KIndexData.VypocetOboroveKoncentrace.RadekObor item in Model.ForYear(y).KIndexVypocet.OboroveKoncentrace.Radky.OrderByDescending(o => o.Vaha))
+                    {
+
+            <div class="row" style="border-bottom: 1px #a0a0a0 dashed">
+                <div class="col-xs-6" style="font-size:11px">@item.Obor</div>
+                <div class="col-xs-6 number" style="white-space: nowrap">
+                    @HlidacStatu.Util.RenderData.NicePercent(item.Vaha / vahaSum)
+                    - @HlidacStatu.Util.RenderData.NiceNumber(item.Hodnota)
+                </div>
+            </div>              }
+
+    }
+            </td>}
+                </tr>
+
+
+
+
+
+
+
+
                 <tr>
                     <td>
                         Koncentrace dodavatelů podle oborů
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @foreach (var cl in HlidacStatu.Lib.Data.Smlouva.SClassification.AllTypes.Where(m => m.MainType))
-            {
-<p>
-    @if (Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value) == null)
-    {
-<b>@(cl.SearchShortcut):</b> }
-else
-{
-<b><a href="/HledatSmlouvy?q=@System.Net.WebUtility.UrlEncode(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Query)">@(cl.SearchShortcut)</a>:</b>
-                        <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Modified).ToHex())">
-                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Combined_Herfindahl_Hirschman_Modified() ?? 0)
-                        </span> @("/")
-                                                <span>
-                                                    <br />
-                                                    @HlidacStatu.Util.RenderData.ShortNicePrice(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.HodnotaSmluvProVypocet),
-                                                    @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluvProVypocet) smluv,
-                                                    @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluvBezCenyProVypocet) bez ceny
-                                                </span>}
-</p>}
-        </td>
-}
+            <td>
+                @foreach (var cl in HlidacStatu.Lib.Data.Smlouva.SClassification.AllTypes.Where(m => m.MainType))
+                {
+            <p>
+                @if (Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value) == null)
+                {
+            <b>@(cl.SearchShortcut):</b> }
+        else
+        {
+            <b><a href="/HledatSmlouvy?q=@System.Net.WebUtility.UrlEncode(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Query)">@(cl.SearchShortcut)</a>:</b>
+                                    <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Modified).ToHex())">
+                                        @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Combined_Herfindahl_Hirschman_Modified() ?? 0)
+                                    </span> @("/")
+                                                            <span>
+                                                                <br />
+                                                                @HlidacStatu.Util.RenderData.ShortNicePrice(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.HodnotaSmluvProVypocet),
+                                                                @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluvProVypocet) smluv,
+                                                                @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluvBezCenyProVypocet) bez ceny
+                                                            </span>}
+            </p>}
+            </td>}
                 </tr>
 
                 <tr>
@@ -324,10 +345,9 @@ else
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PodilSmluvNaCelkovychNakupech)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).PodilSmluvNaCelkovychNakupech)
+            </td>}
                 </tr>
                 <tr>
                     <td>
@@ -335,10 +355,9 @@ else
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
-        <td>
-            @HlidacStatu.Util.RenderData.NicePrice(Model.ForYear(y).FinancniUdaje.OvlivnitelneNakladyCinnosti ?? 0)
-        </td>
-}
+            <td>
+                @HlidacStatu.Util.RenderData.NicePrice(Model.ForYear(y).FinancniUdaje.OvlivnitelneNakladyCinnosti ?? 0)
+            </td>}
                 </tr>
             </tbody>
         </table>
