--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -507,7 +507,7 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
 {
     if (Devmasters.Core.Util.Config.GetConfigValue("KIndex") == "private")
     {
-        if (UserInRole("Admin"))
+        if (UserInRole("KIndex"))
         {
             @Html.Raw(html);
         }
