--- a/Web.Statu/Views/Kindex/Detail.cshtml
+++ b/Web.Statu/Views/Kindex/Detail.cshtml
@@ -207,7 +207,7 @@
             <span>&nbsp;&nbsp;@year</span> }
         else
         {
-            <span>&nbsp;&nbsp;<a href="detail/@ViewBag.ICO?rok=@year">@year</a></span>
+            <span>&nbsp;&nbsp;<a href="@ViewBag.ICO?rok=@year">@year</a></span>
         }
     }
 </h2>
